--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,14 @@
-<!-- TodoListHeaderComponent that lets us create new todo -->
-<app-todo-list-header (add)="onAddTodo($event)"></app-todo-list-header>
-
-<!-- TodoListComponent that displays todos -->
-<app-todo-list>
-
-    <!-- TodoListItemComponent that displays single todo -->
-    <app-todo-list-item></app-todo-list-item>
-
-    <!-- TodoListItemComponent that displays single todo -->
-    <app-todo-list-item></app-todo-list-item>
-</app-todo-list>
-
-<!-- TodoListFooterComponent that displays statistics -->
-<app-todo-list-footer></app-todo-list-footer>
+<section class="todoapp">
+	
+	<app-todo-list-header (add)="onAddTodo($event)"></app-todo-list-header>
+	
+	<app-todo-list [todos]="todos" 
+				(toggleComplete)="onToggleTodoCOmplete($event)"
+				(remove)="onRemoveTodo($event)">
+	</app-todo-list>
+	 
+	<footer class="footer" *ngIf="todos.length > 0">
+    	<span class="todo-count"><strong>{{todos.length}}</strong> {{todos.length == 1 ? 'item' : 'items'}} left</span>
+  	</footer>
+	
+</section>
