--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 	<app-todo-list-header (add)="onAddTodo($event)"></app-todo-list-header>
 	
 	<app-todo-list [todos]="todos" 
-				(toggleComplete)="onToggleTodoCOmplete($event)"
+				(toggleComplete)="onToggleTodoComplete($event)"
 				(remove)="onRemoveTodo($event)">
 	</app-todo-list>
 	 
